--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/background\ image.jpg);
+    background-image: url(images/bac.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -324,7 +324,7 @@ nav .fa-solid{
 }
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(images/background.png.jpg);
+        background-image: url(images/bac.jpg);
     }
     
     .header-text{
